more ansible examples
Signed-off-by: Osamu Aoki <osamu@debian.org>

--- a/014_ansible_debug/pb_main.yml
+++ b/014_ansible_debug/pb_main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Example for ansible.builtin.{debug,set_fact} for var
+- name: Example for ansible.builtin.{debug,set_fact} for YAML
   hosts: localhost
   connection: local
   gather_facts: false
